# OOPS

./: CMakeLists.txt  oopsconfig.h
include/: ode.h  output.h
relfluids/include/: relfluid.h  root.h
relfluids/src/: relfluid.cpp  root.cpp
simplewave/include/: wave.h  waveparameters.h
simplewave/pars/: idfile
simplewave/scripts/: wave.json
simplewave/src/: main.cpp  wave.cpp  waveparser.cpp
src/: ode.cpp  output.cpp
